docs(project): README 정확도 수정, Git 형상관리 규칙 추가, load-test 구조 통합
- README: 부제목 오해 소지 제거, 성능 표 AWS 환경 기준 명시, 프로젝트 구조
  실제 파일과 일치하도록 수정 (Terraform 전체 목록, .github/workflows/,
  load-test/ 추가), CI/CD 파이프라인 SonarQube·자동롤백 반영,
  기술스택에 S3·SonarQube/JaCoCo 추가, 트러블슈팅 6~9번 완성
- LAWS.md: Category 5 형상관리 법률 추가 (GIT-01~05: 브랜치 전략,
  커밋 컨벤션, 민감정보 커밋 금지, 페이즈 커밋 의무, force push 금지)
- CLAUDE.md: Git 운용 절차 추가 (브랜치 전략, 페이즈별 커밋 체크포인트,
  PR 병합 절차, 오케스트레이터 보고 항목)
- load-test: cicd/load-test/glovis-poc.jmx → load-test/로 통합하여
  JMeter 시나리오 분산 해소

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>